2004-06-28  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/DbPrompter.py: Add new class for new, existing, and import
	prompters. Enable opening any format on the startup.
	* src/gramps_main.py: Use new DbPrompter classes.
	* src/ArgHandler.py: Use new DbPrompter classes.

	* src/plugins/WebPage.py (IndividualPage.write_urls): 
	Add function; (IndividualPage.create_page): use write_urls().

2004-06-27  Don Allingham  <dallingham@users.sourceforge.net>
	* src/gramps_main.py: fix import problem

2004-06-26  Don Allingham  <dallingham@users.sourceforge.net>
	* src/gramps_main.py: dropped New Database message. After all, it should
	be incredibly obvious.
	* src/Utils.py: create_id to generate random internal ID
	* src/RelLib.py: new internal ID support
	* src/AddSpouse.py: bug fixes
	* src/ChooseParents.py: bug fixes
	* src/PeopleModel.py: bug fixes
	* src/PeopleView.py: bug fixes
	* src/FamilyView.py: bug fixes
	* src/Bookmarks.py: support for new internal IDs
	* src/EditPerson.py: support for new internal IDs
	* src/plugins/ReadGedcom.py: handle new internal IDs

2004-06-24  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/gramps_main.py (on_import_activate,on_export_activate):
	Add methods.
	* src/Plugins.py (build_import_menu,build_export_menu): Remove;
	(register_export): Change to the new scheme.
	* src/gramps.glade: Add handlers to Import and Export menus. 
	Rename Export to Save As..., add icons. 

2004-06-23  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/ArgHandler.py (handle_args): Add import callback call.
	* src/gramps_main.py: Use open filters, mime types, and handlers 
	from import plugins. 
	* src/Plugins.py: Change import plugin registration.
	* src/ReadXML.py: Change registration.
	* src/plugins/ReadGedcom.py: Change registration.
	* src/plugins/ReadPkg.py: Rewrite and change registration.

2004-06-22  Don Allingham  <dallingham@users.sourceforge.net>
	* src/EditPerson,py: allow reordering of event columns